Used find bugs to find and fix bugs also removed some warnings